--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body {
   padding: 0;
   margin: 0;
 }
-
+user{
+  user-select: none;
+}
 nav ul li{
   font-weight: 600;
   font-size: medium;
@@ -39,7 +41,70 @@ nav ul li{
         opacity: 1;
     }
 }
-
+/*single line code block  */
+li code {
+  display: inline-block;
+  color: #212121;
+  padding: 2px 8px;
+  margin: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #212121;
+  font-family: monospace;
+  font-size: .8rem;
+  font-weight: 700;
+  text-decoration: none;
+  /* text-transform: capitalize; */
+  /* letter-spacing: 0px; */
+  transition: all 0.3s ease-in-out;
+}
+button{
+  user-select: none;
+}
+li{
+  color: black;
+  font-size: 1em;
+  list-style: none;
+}
+ 
+.notification {
+  position: fixed;
+  top: 30px;
+  right: 0;
+  z-index: 9999;
+  width: 300px;
+  height: 60px;
+  color: #fff;
+  font-size: 1.2em;
+  padding: 10px;
+  text-align: center;
+  border-radius: 0 0 5px 5px;
+  display: none;
+}
+  /* width: 200px;
+  position: fixed;
+  z-index: 120;
+  right: 5px;
+  height: 47px;
+  top: 3em;
+  border-radius: 5px;
+} */
+.show{
+  display: block;
+}
+.notification-closet{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.notification-text{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.notification-closet:hover{
+  cursor: pointer;
+  opacity: 0.7;
+}
 .fon {
   font-family: var(--font);
 }
@@ -72,7 +137,7 @@ nav ul li{
 .cover .container {
   position: relative;
   margin: auto;
-  width: 50%;
+  width: 90%;
   min-width: 200px;
   max-width: 450px;
   height: auto;
@@ -105,6 +170,7 @@ nav ul li{
   display: flex;
   justify-content: center;
 }
+
 
 
 
