--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,13 @@
 
 body {
   box-sizing: border-box;
+  overscroll-behavior-y: contain;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0;
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  display: fixed;
 }
 user{
   user-select: none;
